infra/k8s/category-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-category-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-category-dpl
  template:
    metadata:
      labels:
        app: api-category-dpl
    spec:
      containers:
        - name: api-category-dpl
          image: sonnemon/api-category
---
apiVersion: v1
kind: Service
metadata:
  name: api-category-srv
spec:
  selector:
    app: api-category-dpl
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
