infra/k8s/graph-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graph-dpl
  template:
    metadata:
      labels:
        app: graph-dpl
    spec:
      containers:
        - name: graph-dpl
          image: sonnemon/graph
---
apiVersion: v1
kind: Service
metadata:
  name: graph-srv
spec:
  selector:
    app: graph-dpl
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
