infra/k8s/post-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-post-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-post-dpl
  template:
    metadata:
      labels:
        app: api-post-dpl
    spec:
      containers:
        - name: api-post-dpl
          image: sonnemon/api-post
---
apiVersion: v1
kind: Service
metadata:
  name: api-post-srv
spec:
  selector:
    app: api-post-dpl
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
