infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: post-ms-igrs
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: post-ms.dev
      http:
        paths:
          - backend:
              service:
                name: graph-srv
                port:
                  number: 3000
            pathType: Prefix
            path: /graphql
